--- a/base/en-US/about.html
+++ b/base/en-US/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
         <title>
             About
         </title>
-        <!-- version "0.9.0.1 build 20180228.200814" -->
+        <!-- version "0.9.1.12 build 20180228.004156" -->
         <meta name="keywords" content="Batch,Full text search,Manual translate,Industry 4.0,Big data,PLM,ERP,SEO">
         <meta name="description" content="Professional research and development, design, deployment, sales _ full digital enterprise management platform / high simulation digital prototype / batch / full text search / manual translation / industry 4.0 / big data / PLM / ERP / SEO _ Copyright (c) 2017 China Guangzhou Digits Cloud Technology Co., Ltd.">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
@@ -25,27 +25,24 @@
         <div class="navbar navbar-default navbar-static-top" style="font-family:'微软雅黑'">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-9">
-                        <a href="http://dts.digitser.cn/">
-                            <img src="../images/logo.png" class="img-responsive" style="max-height:105px;"
-                            alt="China Guangzhou Digits Cloud Technology Co., Ltd. Log" title="Click here to enter the official website home page">
+                    <div class="col-md-8">
+                        <a target="_blank" href="http://dts.digitser.cn/en-US.html">
+                            <img class="img-responsive" src="../images/logo.png" style="min-width:208px;"
+                            alt="Digits Cloud Community Log" title="Click here to enter the official website home page">
                         </a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-9"></div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <a class="btn btn-primary" target="_blank" style="font-size:12px;color:#7d7d7d;text-align:center;width:90px;margin-top:0px;background:#f8f8f8;border:0px;border-radius:3px;" href="http://data.digitser.cn/en-US.html">
-                                Data
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#7d7d7d;text-align:center;width:90px;margin-top:0px;background:#f8f8f8;border:0px;border-radius:3px;" href="##">
-                                Register
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#7d7d7d;text-align:center;width:90px;margin-top:0px;background:#f8f8f8;border:0px;border-radius:3px;" href="##">
-                                Sign in
-                            </a>
-                        </div>
+                    <div class="col-md-4" style="padding-top:8px;text-align:right;">
+                        <a target="_blank" href="https://pan.baidu.com/s/1dGxcM7R" style="color:#655753;">
+                            Baidu Network Disk
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            Register
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            Sign In
+                        </a>
                     </div>
                 </div>
                 <div class="row">
@@ -53,7 +50,7 @@
                         <div class="row">
                             <ul class="nav nav-pills navbar-left">
                                 <li>
-                                    <a href="../index.html">
+                                    <a href="../en-US.html">
                                         <b>
                                             Home
                                         </b>
@@ -84,78 +81,68 @@
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/app/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ App
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/app/browser.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/browser/index.html" style="text-indent:1em;">
                                                     ├ Digital Browser
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/app/brwspro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/browserpro/index.html" style="text-indent:1em;">
                                                     ├ Digital Browser Pro
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/app/translate.html" style="text-indent:1em;">
-                                                    ├ Digital Translate
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/app/collect.html" style="text-indent:1em;">
-                                                    ├ Data Collect
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/app/compare.html" style="text-indent:1em;">
-                                                    ├ Data Compare
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/app/express.html" style="text-indent:1em;">
-                                                    ├ Digital Express
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/app/machine.html" style="text-indent:1em;">
-                                                    ├ Digital Machine
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/app/budget.html" style="text-indent:1em;">
-                                                    └ Digital Budget
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/translate/index.html" style="text-indent:1em;">
+                                                    └ Digital Translate
                                                 </a>
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/ide/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/compare/index.html" style="text-indent:1em;">
+                                                    └ Data Compare
+                                                </a>
+                                            </li>
+                                            <li class="divider"></li>
+                                            <li>
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ Integrated Development Environment (IDE)
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/ide/ideweb.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/ideweb/index.html" style="text-indent:1em;">
                                                     ├ Digital IDE for Web
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/ide/idepro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/idepro/index.html" style="text-indent:1em;">
                                                     ├ Digital IDE Pro
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/ide/idejava.html" style="text-indent:1em;">
-                                                    ├ Digital IDE for Java
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/ide/idec.html" style="text-indent:1em;">
-                                                    ├ Digital IDE for C/C++
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/ide/idepy.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/idepy/index.html" style="text-indent:1em;">
                                                     └ Digital IDE for Python
                                                 </a>
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/plugin/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/plugin/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ Plugin
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/applet/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/gadget/index.html" style="color:#2F7DC5;">
+                                                    <b>
+                                                        ├ Gadget
+                                                    </b>
+                                                </a>
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         └ Applet
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/applet/ftsearch.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/ftsearch/index.html" style="text-indent:1em;">
                                                     ├ Full Text Search
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/applet/ft_repl.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/ft_repl/index.html" style="text-indent:1em;">
                                                     ├ Full Text Replace
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/applet/ws_dlink.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/ws_dlinkg/index.html" style="text-indent:1em;">
                                                     └ Dead Link Detect
                                                 </a>
                                             </li>
@@ -200,18 +187,18 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <a class="btn btn-primary" target="_blank" style="color:#7d7d7d;text-align:center;width:90px;margin-top:5px;background:#f8f8f8;border:0px;border-radius:3px;" href="../index.html">
-                                简体中文
-                            </a>
-                            <a class="btn btn-primary" target="_blank" style="color:#7d7d7d;text-align:center;width:90px;margin-top:5px;background:#f8f8f8;border:0px;border-radius:3px;" href="../zh-TW.html">
-                                繁體中文
-                            </a>
-                            <a class="btn btn-primary" target="_blank" style="color:#7d7d7d;text-align:center;width:90px;margin-top:5px;background:#f8f8f8;border:0px;border-radius:3px;" href="../en-US.html">
-                                English
-                            </a>
-                        </div>
+                    <div class="col-md-3" style="padding-top:10px;text-align:right;">
+                        <a target="_blank" href="../zh-CN.html" style="color:#5b5b5b;">
+                            简体中文
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a target="_blank" href="../zh-TW.html" style="color:#5b5b5b;">
+                            繁體中文
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a target="_blank" href="../en-US.html" style="color:#5b5b5b;">
+                            English
+                        </a>
                     </div>
                 </div>
             </div>
@@ -219,7 +206,7 @@
         <div class="container">
             <ol class="breadcrumb">
                 <li>
-                    <a href="../index.html">
+                    <a href="../en-US.html">
                         Home
                     </a>
                 </li>
@@ -240,21 +227,13 @@
                     <p></p>
                     <div class="thumbnail" style="font-family:'微软雅黑';padding:2px 0;border:1px solid #fff;">
                         <p style="text-indent:2em;">
-                            <a target="_blank" href="http://dts.digitser.cn/en-US.html">
-                                <b>
-                                    China Guangzhou Digits Cloud Technology Co., Ltd.
-                                </b>
-                            </a>
-                            is "China Guangzhou Digitser Machinery Co., Ltd." IT Division.
-                        </p>
-                        <p style="text-indent:2em;">
                             We not only produce hardware, but also produce software, can provide you with the complete "Industry 4.0" mature digital solutions. Maximize the efficiency of the full life cycle of enterprise products, significantly reduce operating costs, breaking your imagination with independent innovation.
                         </p>
                         <p style="text-indent:2em;">
                             Meet
-                            <a target="_blank" href="http://www.digitser.net/en-US.html">
+                            <a target="_blank" href="http://dts.digitser.cn/en-US.html">
                                 <b>
-                                    "China Guangzhou Digitser Machinery Co., Ltd."
+                                    "Digits Cloud Community"
                                 </b>
                             </a>
                             needs at the same time, to provide industry 4.0 digital, IT, big data, PLM, ERP, comprehensive technical information, electrical automation services for others.
@@ -379,7 +358,7 @@
                             <div class="row">
                                 <ul class="nav nav-pills navbar-left">
                                     <li>
-                                        <a href="../index.html">
+                                        <a href="../en-US.html">
                                             <b>
                                                 Home
                                             </b>
@@ -505,13 +484,13 @@
                     </div>
                     <div class="row">
                         <p style="font-size:10px;text-align:center;color:#7d7d7d;">
-                            Copyright&nbsp;&copy;&nbsp;2017
-                            <a target="_blank" href="http://dts.digitser.cn/" style="color:#7d7d7d;">
-                                China Guangzhou Digits Cloud Technology Co., Ltd.
+                            Copyright&nbsp;&copy;&nbsp;2014-2018
+                            <a target="_blank" href="http://dts.digitser.cn/en-US.html" style="color:#7d7d7d;">
+                                Digits Cloud Community
                             </a>
                         </p>
                         <p style="font-size:10px;text-align:center;color:#7d7d7d;">
-                            <a target="_blank" href="http://www.miitbeian.gov.cn/state/outPortal/loginPortal.action" style="color:#7d7d7d;">
+                            <a target="_blank" href="http://www.miitbeian.gov.cn/" style="color:#7d7d7d;">
                                 Ministry of Industry and Information Technology
                             </a>
                             : GuangDong ICP No. 14079481-2
