--- a/base/zh-TW.html
+++ b/base/zh-TW.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-TW">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
             自適應手機-平闆-PC
             基本靜態網站模闆
         </title>
-        <!-- version "1.5.0.1 build 20180228.200314" -->
+        <!-- version "1.5.1.11 build 20180228.004156" -->
         <meta name="keywords" content="批處理,全文搜索,人工翻譯,工業4.0,大數據,PLM,ERP,SEO">
         <meta name="description" content="專業研發、設計、部署、銷售 _ 全數字化企業管理平颱 / 高仿真數字樣機 / 批處理 / 全文搜索 / 人工翻譯 / 工業4.0 / 大數據 / PLM / ERP / SEO _ 版權所有 (c) 2017 廣州市德雲數科技有限公司">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -27,27 +27,24 @@
         <div class="navbar navbar-default navbar-static-top" style="font-family:'微软雅黑'">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-9">
-                        <a target="_blank" href="http://dts.digitser.cn/">
-                            <img src="images/logo.png" class="img-responsive" style="max-height:105px;"
-                            alt="廣州市德雲數科技有限公司 Log" title="點這裏進入官網首頁">
+                    <div class="col-md-8">
+                        <a target="_blank" href="http://dts.digitser.cn/zh-TW.html">
+                            <img class="img-responsive" src="images/logo.png" style="min-width:208px;"
+                            alt="德雲社區 Log" title="點這裏進入官網首頁">
                         </a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-9"></div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <a class="btn btn-primary" target="_blank" style="font-size:12px;color:#7d7d7d;text-align:center;width:90px;margin-top:0px;background:#f8f8f8;border:0px;border-radius:3px;" href="http://help.digitser.cn/zh-TW.html">
-                                數據資料
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#7d7d7d;text-align:center;width:90px;margin-top:0px;background:#f8f8f8;border:0px;border-radius:3px;" href="##">
-                                注冊
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#7d7d7d;text-align:center;width:90px;margin-top:0px;background:#f8f8f8;border:0px;border-radius:3px;" href="##">
-                                登錄
-                            </a>
-                        </div>
+                    <div class="col-md-4" style="padding-top:8px;text-align:right;">
+                        <a target="_blank" href="https://pan.baidu.com/s/1dGxcM7R" style="color:#655753;">
+                            百度網盤
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            注冊
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            登錄
+                        </a>
                     </div>
                 </div>
                 <div class="row">
@@ -86,78 +83,68 @@
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ 應用
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/browser.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/browser/index.html" style="text-indent:1em;">
                                                     ├ 數字瀏覽器
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/brwspro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/browserpro/index.html" style="text-indent:1em;">
                                                     ├ 數字瀏覽器專業版
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/translate.html" style="text-indent:1em;">
-                                                    ├ 數字翻譯
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/collect.html" style="text-indent:1em;">
-                                                    ├ 數據采集
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/compare.html" style="text-indent:1em;">
-                                                    ├ 數據比較
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/express.html" style="text-indent:1em;">
-                                                    ├ 數字快遞
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/machine.html" style="text-indent:1em;">
-                                                    ├ 數字樣機
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/budget.html" style="text-indent:1em;">
-                                                    └ 數字預算
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/translate/index.html" style="text-indent:1em;">
+                                                    └ 數字翻譯
                                                 </a>
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/ide/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/compare/index.html" style="text-indent:1em;">
+                                                    └ 數據比較
+                                                </a>
+                                            </li>
+                                            <li class="divider"></li>
+                                            <li>
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ IDE 集成開發環境
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/ide/ideweb.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/ideweb/index.html" style="text-indent:1em;">
                                                     ├ 數字 IDE 網頁
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/ide/idepro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/idepro/index.html" style="text-indent:1em;">
                                                     ├ 數字 IDE 專業版
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/ide/idejava.html" style="text-indent:1em;">
-                                                    ├ 數字 IDE Java
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/ide/idec.html" style="text-indent:1em;">
-                                                    ├ 數字 IDE C/C++
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/ide/idepy.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/idepy/index.html" style="text-indent:1em;">
                                                     └ 數字 IDE Python
                                                 </a>
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/plugin/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/plugin/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ 插件
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/applet/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/gadget/index.html" style="color:#2F7DC5;">
+                                                    <b>
+                                                        ├ 小工具
+                                                    </b>
+                                                </a>
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/applet/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         └ 小程序
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/applet/ftsearch.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/applet/ftsearch/index.html" style="text-indent:1em;">
                                                     ├ 全文搜索
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/applet/ft_repl.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/applet/ft_repl/index.html" style="text-indent:1em;">
                                                     ├ 全文替換
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/applet/ws_dlink.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/applet/ws_dlinkg/index.html" style="text-indent:1em;">
                                                     └ 死鏈檢測
                                                 </a>
                                             </li>
@@ -202,18 +189,18 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <a class="btn btn-primary" target="_blank" style="color:#7d7d7d;text-align:center;width:90px;margin-top:5px;background:#f8f8f8;border:0px;border-radius:3px;" href="index.html">
-                                简体中文
-                            </a>
-                            <a class="btn btn-primary" target="_blank" style="color:#7d7d7d;text-align:center;width:90px;margin-top:5px;background:#f8f8f8;border:0px;border-radius:3px;" href="zh-TW.html">
-                                繁體中文
-                            </a>
-                            <a class="btn btn-primary" target="_blank" style="color:#7d7d7d;text-align:center;width:90px;margin-top:5px;background:#f8f8f8;border:0px;border-radius:3px;" href="en-US.html">
-                                English
-                            </a>
-                        </div>
+                    <div class="col-md-3" style="padding-top:10px;text-align:right;">
+                        <a target="_blank" href="zh-CN.html" style="color:#5b5b5b;">
+                            简体中文
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a target="_blank" href="zh-TW.html" style="color:#5b5b5b;">
+                            繁體中文
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a target="_blank" href="en-US.html" style="color:#5b5b5b;">
+                            English
+                        </a>
                     </div>
                 </div>
             </div>
@@ -228,31 +215,37 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="item active">
-                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/ide/ideweb.html">
+                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/ideweb/index.html">
                                     <img src="images/ideweb/4.4.8.72_build_20170929.230121.jpg"
                                     alt="數字 IDE 網頁" title="數字 IDE 網頁">
                                 </a>
                                 <p style="text-align:center;font-size:18px;">
-                                    <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/ide/ideweb.html">
-                                         <b>4.4.8.72 build 20170929.230121</b>
+                                    <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/ideweb/index.html">
+                                        <b>
+                                            5.6.5.3 build 20180218.113907
+                                        </b>
                                     </a>
                                 </p>
                                 <p style="text-align:center;font-family:'微软雅黑';font-size:13px;color:#7d7d7d;">
-                                    ── 數字 IDE 網頁 2017
+                                    ──
+                                    數字 IDE 網頁 2018.5
                                 </p>
                             </div>
                             <div class="item">
-                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/translate.html">
+                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/translate/index.html">
                                     <img src="images/translate/5.2.4.18_build_20171001.160156.jpg"
                                     alt="數字翻譯" title="數字翻譯">
                                 </a>
                                 <p style="text-align:center;font-size:18px;">
-                                    <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/translate.html">
-                                         <b>5.2.4.18 build 20171001.160156</b>
+                                    <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/translate/index.html">
+                                        <b>
+                                            6.4.1.7 build 20180219.133658
+                                        </b>
                                     </a>
                                 </p>
                                 <p style="text-align:center;font-family:'微软雅黑';font-size:13px;color:#7d7d7d;">
-                                    ── 數字翻譯 2017
+                                    ──
+                                    數字翻譯 2018.5
                                 </p>
                             </div>
                         </div>
@@ -288,12 +281,12 @@
                     <hr style="margin:0;border:0;border-top:1px dashed #eee;">
                 </div>
             </div>
-            <p></p>
             <div class="row">
                 <div class="col-md-8">
                     <div class="thumbnail" style="font-family:'微软雅黑';padding:2px 0;border:1px solid #fff;">
+                        <p></p>
                         <p style="text-indent:2em;">
-                            我們不但生産硬件，還生産軟件，能為您提供整套 "工業4.0 大數據" 成熟數字化解決方案。最大限度提高企業産品的全生命周期運轉效率，大幅降低運營成本，以自主創新突破您的想像。
+                            我們不但生産硬件，還生産軟件，能為您提供整套 "工業4.0" 成熟數字化解決方案。最大限度提高企業産品的全生命周期運轉效率，大幅降低運營成本，以自主創新突破您的想像。
                         </p>
                         <p style="text-indent:2em;">
                             在滿足
@@ -302,7 +295,7 @@
                                     "德雲社區"
                                 </b>
                             </a>
-                            需求的同時，嚮外提供 "工業4.0" 數字化、IT、大數據、PLM、ERP、綜閤技術資訊、電氣自動化服務。
+                            需求的同時，嚮外提供工業4.0數字化、IT、大數據、PLM、ERP、綜閤技術資訊、電氣自動化服務。
                         </p>
                         <p></p>
                         <hr style="margin:0;border:0;border-top:1px dashed #eee;">
@@ -541,13 +534,13 @@
                     </div>
                     <div class="row">
                         <p style="font-size:10px;text-align:center;color:#7d7d7d;">
-                            版權所有&nbsp;&copy;&nbsp;2017
-                            <a target="_blank" href="http://dts.digitser.cn/" style="color:#7d7d7d;">
-                                廣州市德雲數科技有限公司
+                            版權所有&nbsp;&copy;&nbsp;2014-2018
+                            <a target="_blank" href="http://dts.digitser.cn/zh-TW.html" style="color:#7d7d7d;">
+                                德雲社區
                             </a>
                         </p>
                         <p style="font-size:10px;text-align:center;color:#7d7d7d;">
-                            <a target="_blank" href="http://www.miitbeian.gov.cn/state/outPortal/loginPortal.action" style="color:#7d7d7d;">
+                            <a target="_blank" href="http://www.miitbeian.gov.cn/" style="color:#7d7d7d;">
                                 工業和信息化部
                             </a>
                             ：粵ICP備14079481號-2
