--- a/base/index.html
+++ b/base/index.html
@@ -9,7 +9,7 @@
             自适应手机-平板-PC
             基本静态网站模板
         </title>
-        <!-- version "1.4.9.10 build 20171017.212444" -->
+        <!-- version "1.5.1.11 build 20180228.004157" -->
         <meta name="keywords" content="批处理,全文搜索,人工翻译,工业4.0,大数据,PLM,ERP,SEO">
         <meta name="description" content="专业研发、设计、部署、销售 _ 全数字化企业管理平台 / 高仿真数字样机 / 批处理 / 全文搜索 / 人工翻译 / 工业4.0 / 大数据 / PLM / ERP / SEO _ 版权所有 (c) 2017 广州市德云数科技有限公司">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -27,27 +27,24 @@
         <div class="navbar navbar-default navbar-static-top" style="font-family:'微软雅黑'">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-9">
-                        <a target="_blank" href="http://dts.digitser.cn/">
-                            <img src="images/logo.png" class="img-responsive" style="max-height:105px;"
-                            alt="广州市德云数科技有限公司 Log" title="点这里进入官网首页">
+                    <div class="col-md-8">
+                        <a target="_blank" href="http://dts.digitser.cn/zh-CN.html">
+                            <img class="img-responsive" src="images/logo.png" style="min-width:208px;"
+                            alt="德云社区 Log" title="点这里进入官网首页">
                         </a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-9"></div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <a class="btn btn-primary" target="_blank" style="font-size:12px;color:#7d7d7d;text-align:center;width:90px;margin-top:0px;background:#f8f8f8;border:0px;border-radius:3px;" href="http://help.digitser.cn/zh-CN.html">
-                                数据资料
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#7d7d7d;text-align:center;width:90px;margin-top:0px;background:#f8f8f8;border:0px;border-radius:3px;" href="##">
-                                注册
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#7d7d7d;text-align:center;width:90px;margin-top:0px;background:#f8f8f8;border:0px;border-radius:3px;" href="##">
-                                登录
-                            </a>
-                        </div>
+                    <div class="col-md-4" style="padding-top:8px;text-align:right;">
+                        <a target="_blank" href="https://pan.baidu.com/s/1dGxcM7R" style="color:#655753;">
+                            百度网盘
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            注册
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            登录
+                        </a>
                     </div>
                 </div>
                 <div class="row">
@@ -86,78 +83,68 @@
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ 应用
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/browser.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/browser/index.html" style="text-indent:1em;">
                                                     ├ 数字浏览器
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/brwspro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/browserpro/index.html" style="text-indent:1em;">
                                                     ├ 数字浏览器专业版
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/translate.html" style="text-indent:1em;">
-                                                    ├ 数字翻译
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/collect.html" style="text-indent:1em;">
-                                                    ├ 数据采集
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/compare.html" style="text-indent:1em;">
-                                                    ├ 数据比较
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/express.html" style="text-indent:1em;">
-                                                    ├ 数字快递
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/machine.html" style="text-indent:1em;">
-                                                    ├ 数字样机
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/budget.html" style="text-indent:1em;">
-                                                    └ 数字预算
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/translate/index.html" style="text-indent:1em;">
+                                                    └ 数字翻译
                                                 </a>
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/compare/index.html" style="text-indent:1em;">
+                                                    └ 数据比较
+                                                </a>
+                                            </li>
+                                            <li class="divider"></li>
+                                            <li>
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ IDE 集成开发环境
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/ideweb.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/ideweb/index.html" style="text-indent:1em;">
                                                     ├ 数字 IDE 网页
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/idepro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/idepro/index.html" style="text-indent:1em;">
                                                     ├ 数字 IDE 专业版
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/idejava.html" style="text-indent:1em;">
-                                                    ├ 数字 IDE Java
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/idec.html" style="text-indent:1em;">
-                                                    ├ 数字 IDE C/C++
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/idepy.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/idepy/index.html" style="text-indent:1em;">
                                                     └ 数字 IDE Python
                                                 </a>
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/plugin/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/plugin/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ 插件
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/applet/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/gadget/index.html" style="color:#2F7DC5;">
+                                                    <b>
+                                                        ├ 小工具
+                                                    </b>
+                                                </a>
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/applet/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         └ 小程序
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/applet/ftsearch.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/applet/ftsearch/index.html" style="text-indent:1em;">
                                                     ├ 全文搜索
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/applet/ft_repl.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/applet/ft_repl/index.html" style="text-indent:1em;">
                                                     ├ 全文替换
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/applet/ws_dlink.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/applet/ws_dlinkg/index.html" style="text-indent:1em;">
                                                     └ 死链检测
                                                 </a>
                                             </li>
@@ -202,18 +189,18 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <a class="btn btn-primary" target="_blank" style="color:#7d7d7d;text-align:center;width:90px;margin-top:5px;background:#f8f8f8;border:0px;border-radius:3px;" href="index.html">
-                                简体中文
-                            </a>
-                            <a class="btn btn-primary" target="_blank" style="color:#7d7d7d;text-align:center;width:90px;margin-top:5px;background:#f8f8f8;border:0px;border-radius:3px;" href="zh-TW.html">
-                                繁體中文
-                            </a>
-                            <a class="btn btn-primary" target="_blank" style="color:#7d7d7d;text-align:center;width:90px;margin-top:5px;background:#f8f8f8;border:0px;border-radius:3px;" href="en-US.html">
-                                English
-                            </a>
-                        </div>
+                    <div class="col-md-3" style="padding-top:10px;text-align:right;">
+                        <a target="_blank" href="zh-CN.html" style="color:#5b5b5b;">
+                            简体中文
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a target="_blank" href="zh-TW.html" style="color:#5b5b5b;">
+                            繁體中文
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a target="_blank" href="en-US.html" style="color:#5b5b5b;">
+                            English
+                        </a>
                     </div>
                 </div>
             </div>
@@ -228,31 +215,37 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="item active">
-                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/ideweb.html">
+                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/ideweb/index.html">
                                     <img src="images/ideweb/4.4.8.72_build_20170929.230121.jpg"
                                     alt="数字 IDE 网页" title="数字 IDE 网页">
                                 </a>
                                 <p style="text-align:center;font-size:18px;">
-                                    <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/ideweb.html">
-                                         <b>4.4.8.72 build 20170929.230121</b>
+                                    <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/ideweb/index.html">
+                                        <b>
+                                            5.6.5.3 build 20180218.113907
+                                        </b>
                                     </a>
                                 </p>
                                 <p style="text-align:center;font-family:'微软雅黑';font-size:13px;color:#7d7d7d;">
-                                    ── 数字 IDE 网页 2017
+                                    ──
+                                    数字 IDE 网页 2018.5
                                 </p>
                             </div>
                             <div class="item">
-                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/translate.html">
+                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/translate/index.html">
                                     <img src="images/translate/5.2.4.18_build_20171001.160156.jpg"
                                     alt="数字翻译" title="数字翻译">
                                 </a>
                                 <p style="text-align:center;font-size:18px;">
-                                    <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/translate.html">
-                                         <b>5.2.4.18 build 20171001.160156</b>
+                                    <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/translate/index.html">
+                                        <b>
+                                            6.4.1.7 build 20180219.133658
+                                        </b>
                                     </a>
                                 </p>
                                 <p style="text-align:center;font-family:'微软雅黑';font-size:13px;color:#7d7d7d;">
-                                    ── 数字翻译 2017
+                                    ──
+                                    数字翻译 2018.5
                                 </p>
                             </div>
                         </div>
@@ -288,12 +281,12 @@
                     <hr style="margin:0;border:0;border-top:1px dashed #eee;">
                 </div>
             </div>
-            <p></p>
             <div class="row">
                 <div class="col-md-8">
                     <div class="thumbnail" style="font-family:'微软雅黑';padding:2px 0;border:1px solid #fff;">
+                        <p></p>
                         <p style="text-indent:2em;">
-                            我们不但生产硬件，还生产软件，能为您提供整套 "工业4.0 大数据" 成熟数字化解决方案。最大限度提高企业产品的全生命周期运转效率，大幅降低运营成本，以自主创新突破您的想像。
+                            我们不但生产硬件，还生产软件，能为您提供整套 "工业4.0" 成熟数字化解决方案。最大限度提高企业产品的全生命周期运转效率，大幅降低运营成本，以自主创新突破您的想像。
                         </p>
                         <p style="text-indent:2em;">
                             在满足
@@ -302,7 +295,7 @@
                                     "德云社区"
                                 </b>
                             </a>
-                            需求的同时，向外提供 "工业4.0" 数字化、IT、大数据、PLM、ERP、综合技术资讯、电气自动化服务。
+                            需求的同时，向外提供工业4.0数字化、IT、大数据、PLM、ERP、综合技术资讯、电气自动化服务。
                         </p>
                         <p></p>
                         <hr style="margin:0;border:0;border-top:1px dashed #eee;">
@@ -541,13 +534,13 @@
                     </div>
                     <div class="row">
                         <p style="font-size:10px;text-align:center;color:#7d7d7d;">
-                            版权所有&nbsp;&copy;&nbsp;2017
-                            <a target="_blank" href="http://dts.digitser.cn/" style="color:#7d7d7d;">
-                                广州市德云数科技有限公司
+                            版权所有&nbsp;&copy;&nbsp;2014-2018
+                            <a target="_blank" href="http://dts.digitser.cn/zh-CN.html" style="color:#7d7d7d;">
+                                德云社区
                             </a>
                         </p>
                         <p style="font-size:10px;text-align:center;color:#7d7d7d;">
-                            <a target="_blank" href="http://www.miitbeian.gov.cn/state/outPortal/loginPortal.action" style="color:#7d7d7d;">
+                            <a target="_blank" href="http://www.miitbeian.gov.cn/" style="color:#7d7d7d;">
                                 工业和信息化部
                             </a>
                             ：粤ICP备14079481号-2
