--- a/base/en-US/about.html
+++ b/base/en-US/about.html
@@ -7,7 +7,7 @@
         <title>
             About
         </title>
-        <!-- version "0.9.1.12 build 20180228.004156" -->
+        <!-- version "0.9.1.13 build 20180228.204935" -->
         <meta name="keywords" content="Batch,Full text search,Manual translate,Industry 4.0,Big data,PLM,ERP,SEO">
         <meta name="description" content="Professional research and development, design, deployment, sales _ full digital enterprise management platform / high simulation digital prototype / batch / full text search / manual translation / industry 4.0 / big data / PLM / ERP / SEO _ Copyright (c) 2017 China Guangzhou Digits Cloud Technology Co., Ltd.">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
@@ -222,12 +222,11 @@
                             Community Profile
                         </b>
                     </h3>
-                    <p></p>
                     <hr style="margin:0;border:0;border-top:1px dashed #eee;">
                     <p></p>
                     <div class="thumbnail" style="font-family:'微软雅黑';padding:2px 0;border:1px solid #fff;">
                         <p style="text-indent:2em;">
-                            We not only produce hardware, but also produce software, can provide you with the complete "Industry 4.0" mature digital solutions. Maximize the efficiency of the full life cycle of enterprise products, significantly reduce operating costs, breaking your imagination with independent innovation.
+                            We not only produce hardware, but also produce software, can provide you with the complete "Industry 4.0, Big Data" mature digital solutions. Maximize the efficiency of the full life cycle of enterprise products, significantly reduce operating costs, breaking your imagination with independent innovation.
                         </p>
                         <p style="text-indent:2em;">
                             Meet
@@ -236,9 +235,8 @@
                                     "Digits Cloud Community"
                                 </b>
                             </a>
-                            needs at the same time, to provide industry 4.0 digital, IT, big data, PLM, ERP, comprehensive technical information, electrical automation services for others.
+                            needs at the same time, to provide "Industry 4.0" digital, IT, big data, PLM, ERP, comprehensive technical information, electrical automation services for others.
                         </p>
-                        <p></p>
                         <hr style="margin:0;border:0;border-top:1px dashed #eee;">
                         <p></p>
                         <p>
