--- a/orange-red/index.html
+++ b/orange-red/index.html
@@ -9,7 +9,7 @@
             自适应手机-平板-PC
             橙红静态网站模板
         </title>
-        <!-- version "1.5.1.11 build 20180228.004157" -->
+        <!-- version "1.5.1.14 build 20180228.204640" -->
         <meta name="keywords" content="批处理,全文搜索,人工翻译,工业4.0,大数据,PLM,ERP,SEO">
         <meta name="description" content="专业研发、设计、部署、销售 _ 全数字化企业管理平台 / 高仿真数字样机 / 批处理 / 全文搜索 / 人工翻译 / 工业4.0 / 大数据 / PLM / ERP / SEO _ 版权所有 (c) 2017 广州市德云数科技有限公司">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -281,12 +281,12 @@
                     <hr style="margin:0;border:0;border-top:1px dashed #eee;">
                 </div>
             </div>
+            <p></p>
             <div class="row">
                 <div class="col-md-8">
                     <div class="thumbnail" style="font-family:'微软雅黑';padding:2px 0;border:1px solid #fff;">
-                        <p></p>
                         <p style="text-indent:2em;">
-                            我们不但生产硬件，还生产软件，能为您提供整套 "工业4.0" 成熟数字化解决方案。最大限度提高企业产品的全生命周期运转效率，大幅降低运营成本，以自主创新突破您的想像。
+                            我们不但生产硬件，还生产软件，能为您提供整套 "工业4.0 大数据" 成熟数字化解决方案。最大限度提高企业产品的全生命周期运转效率，大幅降低运营成本，以自主创新突破您的想像。
                         </p>
                         <p style="text-indent:2em;">
                             在满足
@@ -295,9 +295,8 @@
                                     "德云社区"
                                 </b>
                             </a>
-                            需求的同时，向外提供工业4.0数字化、IT、大数据、PLM、ERP、综合技术资讯、电气自动化服务。
+                            需求的同时，向外提供 "工业4.0" 数字化、IT、大数据、PLM、ERP、综合技术资讯、电气自动化服务。
                         </p>
-                        <p></p>
                         <hr style="margin:0;border:0;border-top:1px dashed #eee;">
                         <p></p>
                         <p>
